syntax = "proto3";
package services;
option go_package = "../;proto";

//获赞数
message UpdateTotalFavorited_request {
  int64 user_id = 1; // 用户id
  int32 count = 2;// 增加的数量
  int32 type = 3;// 1是增加，2是减少
}

message UpdateTotalFavorited_response {
  int32 status_code = 1; //响应，成功是0，失败是其他值
}

//喜欢的视频数
message UpdateFavoriteCount_request {
  int64 user_id = 1; // 用户id
  int32 count = 2;// 增加的数量
  int32 type = 3;// 1是增加，2是减少
}

message UpdateFavoriteCount_response {
  int32 status_code = 1; //响应，成功是0，失败是其他值
}

service ToFavoriteService{
  rpc UpdateTotalFavorited(UpdateTotalFavorited_request) returns (UpdateTotalFavorited_response);
  rpc UpdateFavoriteCount(UpdateFavoriteCount_request) returns (UpdateFavoriteCount_response);
}